@@ -1729,20 +1729,16 @@ x_1 - x_2 - 5 x_4 + x_5}
 <injective>
 <status>No</status>
 <explanation>Since the kernel is nontrivial <acroref type="theorem" acro="KILT" /> tells us that the linear transformation is not injective.  Also, since the rank can not exceed 3, we are guaranteed to have a nullity of at least 2, just from checking dimensions of the domain and the codomain.  In particular, verify that
-%
 <alignmath>
 <![CDATA[\lt{T}{\colvector{1\\2\\-1\\4\\5}}&=\colvector{38\\24\\-16}&]]>
 <![CDATA[\lt{T}{\colvector{0\\ -3\\ 0\\ 5\\ 6}}&=\colvector{38\\24\\-16}]]>
 </alignmath>
-%
 This demonstration that $T$ is not injective is constructed with the observation that
-%
 <alignmath>
 <![CDATA[\colvector{0\\-3\\0\\5\\6}&=\colvector{1\\2\\-1\\4\\5}+\colvector{-1\\-5\\1\\1\\1}]]>
 \intertext{and}
 <![CDATA[\vect{z}&=\colvector{-1\\-5\\1\\1\\1}\in\krn{T}]]>
 </alignmath>
-%
 so the vector $\vect{z}$ effectively <q>does nothing</q> in the evaluation of $T$.
 </explanation>
 </injective>
@@ -1803,20 +1799,16 @@ x_1 - 2 x_2 + 3 x_3 - 9 x_4 + 3 x_5\\
 <injective>
 <status>No</status>
 <explanation>Since the kernel is nontrivial <acroref type="theorem" acro="KILT" /> tells us that the linear transformation is not injective.  Also, since the rank can not exceed 3, we are guaranteed to have a nullity of at least 2, just from checking dimensions of the domain and the codomain.  In particular, verify that
-%
 <alignmath>
 <![CDATA[\lt{T}{\colvector{-3\\1\\-2\\-3\\1}}&=\colvector{6\\19\\6}&]]>
 <![CDATA[\lt{T}{\colvector{-4\\-4\\-2\\-1\\4}}&=\colvector{6\\19\\6}]]>
 </alignmath>
-%
 This demonstration that $T$ is not injective is constructed with the observation that
-%
 <alignmath>
 <![CDATA[\colvector{-4\\-4\\-2\\-1\\4}&=\colvector{-3\\1\\-2\\-3\\1}+\colvector{-1\\-5\\0\\2\\3}]]>
 \intertext{and}
 <![CDATA[\vect{z}&=\colvector{-1\\-5\\0\\2\\3}\in\krn{T}]]>
 </alignmath>
-%
 so the vector $\vect{z}$ effectively <q>does nothing</q> in the evaluation of $T$.
 </explanation>
 </injective>
@@ -1878,20 +1870,16 @@ x_1 + 2 x_3
 <injective>
 <status>No</status>
 <explanation>Since the kernel is nontrivial <acroref type="theorem" acro="KILT" /> tells us that the linear transformation is not injective.  Also, since the rank can not exceed 3, we are guaranteed to have a nullity of at least 2, just from checking dimensions of the domain and the codomain.  In particular, verify that
-%
 <alignmath>
 <![CDATA[\lt{T}{\colvector{5\\-1\\3}}&=\colvector{-15\\-19\\7\\10\\11}&]]>
 <![CDATA[\lt{T}{\colvector{1\\1\\5}}&=\colvector{-15\\-19\\7\\10\\11}]]>
 </alignmath>
-%
 This demonstration that $T$ is not injective is constructed with the observation that
-%
 <alignmath>
 <![CDATA[\colvector{1\\1\\5}&=\colvector{5\\-1\\3}+\colvector{-4\\2\\2}]]>
 \intertext{and}
 <![CDATA[\vect{z}&=\colvector{-4\\2\\2}\in\krn{T}]]>
 </alignmath>
-%
 so the vector $\vect{z}$ effectively <q>does nothing</q> in the evaluation of $T$.
 </explanation>
 </injective>
@@ -1908,7 +1896,6 @@ so the vector $\vect{z}$ effectively <q>does nothing</q> in the evaluation of $T
 <surjective>
 <status>No</status>
 <explanation>The dimension of the range is 2, and the codomain ($\complex{5}$) has dimension 5.  So the transformation is not onto.  Notice too that since the domain $\complex{3}$ has dimension 3, it is impossible for the range to have a dimension greater than 3, and no matter what the actual definition of the function, it cannot possibly be onto.<br /><br />
-%
 To be more precise, verify that $\colvector{2\\3\\1\\1\\1}\not\in\rng{T}$, by setting the output equal to this vector and seeing that the resulting system of linear equations has no solution, <ie /> is inconsistent.  So the preimage, $\preimage{T}{\colvector{2\\3\\1\\1\\1}}$, is empty.  This alone is sufficient to see that the linear transformation is not onto.
 </explanation>
 </surjective>
@@ -1972,7 +1959,6 @@ x_1 + x_2 + 3 x_3\\
 <surjective>
 <status>No</status>
 <explanation>The dimension of the range is 3, and the codomain ($\complex{5}$) has dimension 5.  So the transformation is not surjective.  Notice too that since the domain $\complex{3}$ has dimension 3, it is impossible for the range to have a dimension greater than 3, and no matter what the actual definition of the function, it cannot possibly be surjective in this situation.<br /><br />
-%
 To be more precise, verify that $\colvector{2\\1\\-3\\2\\6}\not\in\rng{T}$, by setting the output equal to this vector and seeing that the resulting system of linear equations has no solution, <ie /> is inconsistent.  So the preimage, $\preimage{T}{\colvector{2\\1\\-3\\2\\6}}$, is empty.  This alone is sufficient to see that the linear transformation is not onto.
 </explanation>
 </surjective>
@@ -2021,20 +2007,16 @@ To be more precise, verify that $\colvector{2\\1\\-3\\2\\6}\not\in\rng{T}$, by s
 <injective>
 <status>No</status>
 <explanation>Since the kernel is nontrivial <acroref type="theorem" acro="KILT" /> tells us that the linear transformation is not injective.  Also, since the rank can not exceed 3, we are guaranteed to have a nullity of at least 2, just from checking dimensions of the domain and the codomain.  In particular, verify that
-%
 <alignmath>
 <![CDATA[\lt{T}{\colvector{1\\3\\-1\\2\\4}}&=\colvector{4\\55\\72\\77\\31}&]]>
 <![CDATA[\lt{T}{\colvector{4\\7\\0\\5\\7}}&=\colvector{4\\55\\72\\77\\31}]]>
 </alignmath>
-%
 This demonstration that $T$ is not injective is constructed with the observation that
-%
 <alignmath>
 <![CDATA[\colvector{4\\7\\0\\5\\7}&=\colvector{1\\3\\-1\\2\\4}+\colvector{3\\4\\1\\3\\3}]]>
 \intertext{and}
 <![CDATA[\vect{z}&=\colvector{3\\4\\1\\3\\3}\in\krn{T}]]>
 </alignmath>
-%
 so the vector $\vect{z}$ effectively <q>does nothing</q> in the evaluation of $T$.
 </explanation>
 </injective>
@@ -2053,7 +2035,6 @@ so the vector $\vect{z}$ effectively <q>does nothing</q> in the evaluation of $T
 <surjective>
 <status>No</status>
 <explanation>The dimension of the range is 4, and the codomain ($\complex{5}$) has dimension 5.  So $\rng{T}\neq\complex{5}$ and by <acroref type="theorem" acro="RSLT" /> the transformation is not surjective.<br /><br />
-%
 To be more precise, verify that $\colvector{-1\\2\\3\\-1\\4}\not\in\rng{T}$, by setting the output equal to this vector and seeing that the resulting system of linear equations has no solution, <ie /> is inconsistent.  So the preimage, $\preimage{T}{\colvector{-1\\2\\3\\-1\\4}}$, is empty.  This alone is sufficient to see that the linear transformation is not onto.
 </explanation>
 </surjective>
@@ -2206,21 +2187,17 @@ To be more precise, verify that $\colvector{-1\\2\\3\\-1\\4}\not\in\rng{T}$, by 
 <injective>
 <status>No</status>
 <explanation>Since the kernel is nontrivial <acroref type="theorem" acro="KILT" /> tells us that the linear transformation is not injective.  Also, since the rank can not exceed 3, we are guaranteed to have a nullity of at least 1, just from checking dimensions of the domain and the codomain.  In particular, verify that
-%
 <alignmath>
 <![CDATA[\lt{T}{\colvector{2\\1\\3}}&=\begin{bmatrix}1&9\\10&-16\end{bmatrix}]]>
 <![CDATA[&]]>
 <![CDATA[\lt{T}{\colvector{0\\-1\\11}}&=\begin{bmatrix}1&9\\10&-16\end{bmatrix}]]>
 </alignmath>
-%
 This demonstration that $T$ is not injective is constructed with the observation that
-%
 <alignmath>
 <![CDATA[\colvector{0\\-1\\11}&=\colvector{2\\1\\3}+\colvector{-2\\-2\\8}]]>
 \intertext{and}
 <![CDATA[\vect{z}&=\colvector{-2\\-2\\8}\in\krn{T}]]>
 </alignmath>
-%
 so the vector $\vect{z}$ effectively <q>does nothing</q> in the evaluation of $T$.
 </explanation>
 </injective>
@@ -2239,8 +2216,7 @@ so the vector $\vect{z}$ effectively <q>does nothing</q> in the evaluation of $T
 <surjective>
 <status>No</status>
 <explanation>The dimension of the range is 2, and the codomain ($M_{22}$) has dimension 4.  So the transformation is not surjective.  Notice too that since the domain $\complex{3}$ has dimension 3, it is impossible for the range to have a dimension greater than 3, and no matter what the actual definition of the function, it cannot possibly be surjective in this situation.<br /><br />
-%
-<![CDATA[To be more precise, verify that $\begin{bmatrix}2&-1\\1&3\end{bmatrix}\not\in\rng{T}$, by setting the output of $T$ equal to this matrix and seeing that the resulting system of linear equations has no solution, <ie /> is inconsistent.  So the preimage, $\preimage{T}{\begin{bmatrix}2&-1\\1&3\end{bmatrix}}$, is empty.   This alone is sufficient to see that the linear transformation is not onto.]]>
+To be more precise, verify that <![CDATA[$\begin{bmatrix}2&-1\\1&3\end{bmatrix}\not\in\rng{T}$]]>, by setting the output of $T$ equal to this matrix and seeing that the resulting system of linear equations has no solution, <ie /> is inconsistent.  So the preimage, <![CDATA[$\preimage{T}{\begin{bmatrix}2&-1\\1&3\end{bmatrix}}$]]>, is empty.   This alone is sufficient to see that the linear transformation is not onto.
 </explanation>
 </surjective>
 
@@ -2317,7 +2293,6 @@ x^6-2x^5}
 <surjective>
 <status>No</status>
 <explanation>The dimension of the range is 5, and the codomain ($P_5$) has dimension 6.  So the transformation is not surjective.  Notice too that since the domain $P_4$ has dimension 5, it is impossible for the range to have a dimension greater than 5, and no matter what the actual definition of the function, it cannot possibly be surjective in this situation.<br /><br />
-%
 To be more precise, verify that $1+x+x^2+x^3+x^4\not\in\rng{T}$, by setting the output equal to this vector and seeing that the resulting system of linear equations has no solution, <ie /> is inconsistent.  So the preimage, $\preimage{T}{1+x+x^2+x^3+x^4}$, is nonempty.  This alone is sufficient to see that the linear transformation is not onto.
 </explanation>
 </surjective>
@@ -2377,22 +2352,18 @@ To be more precise, verify that $1+x+x^2+x^3+x^4\not\in\rng{T}$, by setting the 
 <injective>
 <status>No</status>
 <explanation>Since the kernel is nontrivial <acroref type="theorem" acro="KILT" /> tells us that the linear transformation is not injective.  Also, since the rank can not exceed 4, we are guaranteed to have a nullity of at least 2, just from checking dimensions of the domain and the codomain.  In particular, verify that
-%
 <alignmath>
 <![CDATA[\lt{T}{\begin{bmatrix}1&10&-2\\3&-1&1\end{bmatrix}}&=\colvector{-7\\-14\\-1\\-13}]]>
 <![CDATA[&]]>
 <![CDATA[\lt{T}{\begin{bmatrix}5&-3&-1\\5&3&3\end{bmatrix}}&=\colvector{-7\\-14\\-1\\-13}]]>
 </alignmath>
-%
 This demonstration that $T$ is not injective is constructed with the observation that
-%
 <alignmath>
 <![CDATA[\begin{bmatrix}5&-3&-1\\5&3&3\end{bmatrix}]]>
 <![CDATA[&=\begin{bmatrix}1&10&-2\\3&-1&1\end{bmatrix}+\begin{bmatrix}4&-13&1\\2&4&2\end{bmatrix}]]>
 \intertext{and}
 <![CDATA[\vect{z}&=\begin{bmatrix}4&-13&1\\2&4&2\end{bmatrix}\in\krn{T}]]>
 </alignmath>
-%
 so the vector $\vect{z}$ effectively <q>does nothing</q> in the evaluation of $T$.
 </explanation>
 </injective>
@@ -2644,22 +2615,18 @@ so the vector $\vect{z}$ effectively <q>does nothing</q> in the evaluation of $T
 <injective>
 <status>No</status>
 <explanation>Since the kernel is nontrivial <acroref type="theorem" acro="KILT" /> tells us that the linear transformation is not injective.  In particular, verify that
-%
 <alignmath>
 <![CDATA[\lt{T}{\begin{bmatrix}-2&0\\1&-4\end{bmatrix}}&=\begin{bmatrix}115&78\\-38&-35\end{bmatrix}]]>
 <![CDATA[&]]>
 <![CDATA[\lt{T}{\begin{bmatrix}4&3\\-1&3\end{bmatrix}}&=\begin{bmatrix}115&78\\-38&-35\end{bmatrix}]]>
 </alignmath>
-%
 This demonstration that $T$ is not injective is constructed with the observation that
-%
 <alignmath>
 <![CDATA[\begin{bmatrix}4&3\\-1&3\end{bmatrix}]]>
 <![CDATA[&=\begin{bmatrix}-2&0\\1&-4\end{bmatrix}+\begin{bmatrix}6&3\\-2&-1\end{bmatrix}]]>
 \intertext{and}
 <![CDATA[\vect{z}&=\begin{bmatrix}6&3\\-2&-1\end{bmatrix}\in\krn{T}]]>
 </alignmath>
-%
 so the vector $\vect{z}$ effectively <q>does nothing</q> in the evaluation of $T$.
 </explanation>
 </injective>
@@ -2680,7 +2647,6 @@ so the vector $\vect{z}$ effectively <q>does nothing</q> in the evaluation of $T
 <surjective>
 <status>No</status>
 <explanation>The dimension of the range is 3, and the codomain ($M_{22}$) has dimension 5.  So $\rng{T}\neq M_{22}$ and by <acroref type="theorem" acro="RSLT" /> the transformation is not surjective.<br /><br />
-%
 <![CDATA[To be more precise, verify that $\begin{bmatrix}2 & 4\\ 3 & 1\end{bmatrix}\not\in\rng{T}$, by setting the output of $T$ equal to this matrix and seeing that the resulting system of linear equations has no solution, <ie /> is inconsistent.  So the preimage, $\preimage{T}{\begin{bmatrix}2 & 4\\ 3 & 1\end{bmatrix}}$, is empty.  This alone is sufficient to see that the linear transformation is not onto.]]>
 </explanation>
 </surjective>
