@@ -315,12 +315,12 @@ December 2012</flushright>
 
 <license>
 <html>
-<!-- FCLA Edits: &mdash; -> <mdash />; &copy; -> <copyright />; <ellipsis /> -> <ellipsis />; -->
+<!-- FCLA Edits: &mdash; -> <mdash />; &copy; -> &#x00A9;; <ellipsis /> -> <ellipsis />; -->
 <![CDATA[<h3 style="text-align: center;">GNU Free Documentation License</h3>
 
 <p style="text-align: center;">Version 1.3, 3 November 2008</p>
 
-<p> Copyright <copyright /> 2000, 2001, 2002, 2007, 2008 Free Software Foundation, Inc.
+<p> Copyright &#x00A9; 2000, 2001, 2002, 2007, 2008 Free Software Foundation, Inc.
      &lt;<a href="http://fsf.org/">http://fsf.org/</a>&gt;
  </p><p>Everyone is permitted to copy and distribute verbatim copies
  of this license document, but changing it is not allowed.</p>
