@@ -761,7 +761,7 @@ Whew!  Here we go.  These are great proofs to practice with, so try to concoct t
 </theorem>
 
 <theorem acro="MMA" index="matrix multiplication!associativity">
-<title>Matrix Multiplication is Associative </title>
+<title>Matrix Multiplication is Associative</title>
 <statement>
 <p>Suppose $A$ is an $m\times n$ matrix, $B$ is an $n\times p$ matrix and $D$ is a $p\times s$ matrix.  Then  $A(BD)=(AB)D$.</p>
 
