@@ -9,7 +9,7 @@
 <!-- % -->
 <!-- %%%%%%%%%% -->
 <introduction>
-<p>In this section we specialize further and consider matrices with equal numbers of rows and columns, which when considered as coefficient matrices lead to systems with equal numbers of equations and variables.  We will see in the second half of the course (<acroref type="chapter" acro="D" />, <acroref type="chapter" acro="E" /> <acroref type="chapter" acro="LT" />, <acroref type="chapter" acro="R" />) that these matrices are especially important.</p>
+<p>In this section we specialize further and consider matrices with equal numbers of rows and columns, which when considered as coefficient matrices lead to systems with equal numbers of equations and variables.  We will see in the second half of the course (<acroref type="chapter" acro="D" />, <acroref type="chapter" acro="E" />, <acroref type="chapter" acro="LT" />, <acroref type="chapter" acro="R" />) that these matrices are especially important.</p>
 
 </introduction>
 
