@@ -1398,23 +1398,23 @@ Row 3 represents the equation $0=1$, which is patently false, so the original sy
 <![CDATA[-2x_1-4x_2+x_3+11x_4&=-10]]>
 </alignmath>
 </problem>
-<solution contributor="robertbeezer">The augmented matrix row-reduces to\\
-<equation>
+<solution contributor="robertbeezer">The augmented matrix row-reduces to
+<alignmath>
 \begin{bmatrix}
 <![CDATA[\leading{1} &  2 &  0 &  -4 &  2\\]]>
 <![CDATA[0 &  0 &  \leading{1} &  3 &  -6\\]]>
 <![CDATA[0 &  0 &  0 &  0 &  0]]>
 \end{bmatrix}
-</equation>
+</alignmath>
 In the spirit of <acroref type="example" acro="SAA" />, we can express the infinitely many solutions of this system compactly with set notation.  The key is to express certain variables in terms of others.  More specifically, each pivot column number is the index of a variable that can be written in terms of the variables whose indices are non-pivot columns.  Or saying the same thing: for each $i$ in $D$, we can find an expression for $x_i$ in terms of the variables without their index in $D$.  Here $D=\set{1,\,3}$, so
 <alignmath>
 <![CDATA[x_1&=2-2x_2+4x_4\\]]>
 <![CDATA[x_3&=-6\quad\quad-3x_4]]>
 </alignmath>
 As a set, we write the solutions precisely as
-<equation>
+<alignmath>
 \setparts{\colvector{2-2x_2+4x_4\\x_2\\-6-3x_4\\x_4}}{x_2,\,x_4\in\complex{\null}}
-</equation>
+</alignmath>
 </solution>
 </exercise>
 
