@@ -2,6 +2,7 @@ v3.01 2013/xx/xx
 ~~~~~~~~~~~~~~~~
 New:  Exercise MM.T12, Theorem HMIP reprised
 Change:  Proof of Theorem OD uses normality of diagonal matrices (Hunter Wills)
+Typo: Miscellaneous edits (David Farmer)
 Typo:  Solution ILT.C29, inner span should be a set (Aysha Orta)
 
 v3.00 2012/12/05
